라이브리컨테이너에서 .desc_image 클래스 제거

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<section class="description">
 			<h2>라이브리 소셜댓글이란?</h2>
 			<p class="subtitle">별도의 회원 가입 없이 SNS(트위터, 페이스북 등) 계정으로 로그인하여 사이트에 댓글을 달 수 있는 서비스입니다.</p>
-			<div class="desc_image" id="livereContainer">
+			<div id="livereContainer">
 				<script type="text/javascript">
 					var consumer_seq 	= "200";
 					var livere_seq 		= "14937";
