이미지 대폭 수

--- a/index.html
+++ b/index.html
@@ -93,6 +93,17 @@
 				<li><img src="http://101.livere.co.kr/livere8com/images/intro/portfolio/logodata/media_company/yhnews.png" alt="연합뉴스"/></li>
 				<li><img src="http://101.livere.co.kr/livere8com/images/intro/portfolio/logodata/whole_enterprise/samsung.png" alt="삼성그룹"/></li>
 				<li><img src="http://101.livere.co.kr/livere8com/images/intro/portfolio/logodata/whole_enterprise/kb.png" alt="KB국민은행"/></li>
+
+				<li id="seoul"></li>
+				<li id="busan"></li>
+				<li id="sejong"></li>
+				<li id="kbs"></li>
+				<li id="mbc"></li>
+				<li id="sbs"></li>
+				<li id="yonhap"></li>
+				<li id="samsung"></li>
+				<li id="kb"></li>
+
 			</ul>
 			<div class="more_desc">1. 언론사 및 방송사: KBS, MBC, SBS, 연합뉴스, 한겨레, 경향신문, 매일경제, 한국경 등 230여  언론사.</div>
 			<div class="more_desc">2. 기업: 삼성전자, LG전자, SK텔레콤, KB국민은행, KEB외환은행, IBK기업은행, BC카드, 하나SK카드 등</div>
