--- a/index.html
+++ b/index.html
@@ -84,16 +84,17 @@
 			<h2>라이브리 고객사</h2>
 			<p class="subtitle">대한민국의 온라인 소통은 라이브리가 함께합니다.</p>
 			<ul class="visual_list">
-				<li id="seoul"></li>
-				<li id="busan"></li>
-				<li id="sejong"></li>
-				<li id="kbs"></li>
-				<li id="mbc"></li>
-				<li id="sbs"></li>
-				<li id="yonhap"></li>
-				<li id="samsung"></li>
-				<li id="kb"></li>
+				<li><a href="http://www.seoul.go.kr" target="_blank"><img src="../vote2014/images/customers/seoul.png" alt="서울특별시청"></a></li>
+				<li><a href="http://www.busan.go.kr" target="_blank"><img src="../vote2014/images/customers/busan.png" alt=""></a></li>
+				<li><a href="http://www.sejongpac.or.kr" target="_blank"><img src="../vote2014/images/customers/sejong.png" alt=""></a></li>
+				<li><a href="http://www.kbs.co.kr" target="_blank"><img src="../vote2014/images/customers/kbs.png" alt=""></a></li>
+				<li><a href="http://www.mbc.co.kr" target="_blank"><img src="../vote2014/images/customers/mbc.png" alt=""></a></li>
+				<li><a href="http://www.sbs.co.kr" target="_blank"><img src="../vote2014/images/customers/sbs.png" alt=""></a></li>
+				<li><a href="http://www.yonhapnews.co.kr" target="_blank"><img src="../vote2014/images/customers/yonhap.png" alt=""></a></li>
+				<li><a href="http://www.samsung.com" target="_blank"><img src="../vote2014/images/customers/samsung.png" alt=""></a></li>
+				<li><a href="http://www.kbstar.com" target="_blank"><img src="../vote2014/images/customers/kb.png" alt=""></a></li>	
 			</ul>
+
 			<div class="more_desc">1. 언론사 및 방송사: KBS, MBC, SBS, 연합뉴스, 한겨레, 경향신문, 매일경제, 한국경 등 230여  언론사.</div>
 			<div class="more_desc">2. 기업: 삼성전자, LG전자, SK텔레콤, KB국민은행, KEB외환은행, IBK기업은행, BC카드, 하나SK카드 등</div>
 			<div class="more_desc">3. 정부부처 및 공공기관: 서울시, 경기도, 부산시, 세종문화회관, 문화체육관광부 정책브리핑 등</div>
