customer - deleted MBC

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 			<h2>라이브리 고객사</h2>
 			<p class="subtitle">대한민국의 온라인 소통은 라이브리가 함께합니다.</p>
 			<ul class="visual_list">
-				<li><a href="http://www.seoul.go.kr" target="_blank"><img src="../vote2014/images/customers/seoul.png" alt="서울특별시청"></a></li>
-				<li><a href="http://www.busan.go.kr" target="_blank"><img src="../vote2014/images/customers/busan.png" alt=""></a></li>
-				<li><a href="http://www.sejongpac.or.kr" target="_blank"><img src="../vote2014/images/customers/sejong.png" alt=""></a></li>
+				<li><a href="http://gov.seoul.go.kr/bigear2-page#3" target="_blank"><img src="../vote2014/images/customers/seoul.png" alt="서울특별시청"></a></li>
+				<li><a href="http://news.busan.go.kr/sub/special01.jsp?amode=_viw&arti_sno=201310021543060001&sect_cd=100005" target="_blank"><img src="../vote2014/images/customers/busan.png" alt=""></a></li>
+				<li><a href="http://www.sejongpac.or.kr/performance/view.asp?performCode=grpm1211281416001&performIdx=20274" target="_blank"><img src="../vote2014/images/customers/sejong.png" alt=""></a></li>
 				<li><a href="http://www.kbs.co.kr" target="_blank"><img src="../vote2014/images/customers/kbs.png" alt=""></a></li>
-				<li><a href="http://www.mbc.co.kr" target="_blank"><img src="../vote2014/images/customers/mbc.png" alt=""></a></li>
+				<!-- <li><a href="http://www.mbc.co.kr" target="_blank"><img src="../vote2014/images/customers/mbc.png" alt=""></a></li> -->
 				<li><a href="http://www.sbs.co.kr" target="_blank"><img src="../vote2014/images/customers/sbs.png" alt=""></a></li>
 				<li><a href="http://www.yonhapnews.co.kr" target="_blank"><img src="../vote2014/images/customers/yonhap.png" alt=""></a></li>
 				<li><a href="http://www.samsung.com" target="_blank"><img src="../vote2014/images/customers/samsung.png" alt=""></a></li>
