--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 				<li><a href="https://otalk.kbstar.com/2743000243" target="_blank"><img src="../vote2014/images/customers/kb.png" alt=""></a></li>	
 			</ul>
 
-			<div class="more_desc">1. 언론사 및 방송사: KBS, MBC, SBS, 연합뉴스, 한겨레, 경향신문, 매일경제, 한국경 등 230여  언론사.</div>
+			<div class="more_desc">1. 언론사 및 방송사: KBS, MBC, SBS, 연합뉴스, 한겨레, 경향신문, 매일경제, 한국경제 등 230여  언론사.</div>
 			<div class="more_desc">2. 기업: 삼성전자, LG전자, SK텔레콤, KB국민은행, KEB외환은행, IBK기업은행, BC카드, 하나SK카드 등</div>
 			<div class="more_desc">3. 정부부처 및 공공기관: 서울시, 경기도, 부산시, 세종문화회관, 문화체육관광부 정책브리핑 등</div>
 			<div class="more_desc">4. 비영리기관: 굿네이버스, 아름다운재단 등</div>
