--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="//101.livere.co.kr/js/livere8_lib.js" charset="utf-8"></script>
 	<meta property="og:image" content="images/vote.png" />
-	<meta property="og:description" content="2014년 지방선거 후보자 여러분께 라이브리 소셜댓글을 무료로 제공합니다. (기간: 2014년 6월 5일 24:00 까지)" />
+	<meta property="og:description" content="2014년 지방선거 후보자 여러분께 라이브리 소셜댓글을 무료로 제공합니다. (기간: 2014년 6월 5일 24:00 까지)" 
+	/>
 </head>
 <body>
 	<header>
@@ -30,9 +31,10 @@
 
 	<div class="container">
 		<div class="headline">
-			<div>2014년 지방선거 후보자 여러분께</div>
-			<div>라이브리 소셜댓글을 무료로 제공합니다.</div>
-			<div>(기간: 2014년 6월 5일 24:00 까지)</div>
+			<div class="headline1">2014년 지방선거 후보자 여러분께</div>
+			<div class="headline2">라이브리 소셜댓글을 무료로 제공합니다.</div>
+			<div class="headline3">(기간: 2014년 6월 5일 24:00 까지)</div>
+			<div> 유료고객은? </div>
 		</div>
 	</div>
 	
