보안이 지 추가

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="//101.livere.co.kr/js/livere8_lib.js" charset="utf-8"></script>
 	<meta property="og:image" content="images/vote.png" />
-	<meta property="og:description" content="2014년 지방선거 후보자 여러분께 라이브리 소셜댓글을 무료로 제공합니다. (기간: 2014년 6월 5일 24:00 까지)" 
+	<meta property="og:description" content="2014년 지방선거 후보자 여러분께 라이브리 소셜댓글을 무료로 제공합니다. (기간: 2014년 6월 11일 24:00 까지)" 
 	/>
 </head>
 <body>
@@ -76,7 +76,7 @@
 				<li><img src="images/sso.png"/><div class="redbox text_desc">Single Sign-On: 간편한 로그인</div></li>
 				<li><img src="images/mobile.png"/><div class="redbox text_desc">모바일/태블릿 연동</div></li>
 				<li><img src="images/web_standard.png"/><div class="redbox text_desc">웹접근성 및 웹표준 준수</div></li>
-				<li><img src="images/sns_login.png"/><div class="redbox text_desc">악성코드, 디도스 공격에 대한 보안</div></li>
+				<li><img src="images/shield.jpg"/><div class="redbox text_desc">악성코드, 디도스 공격에 대한 보안</div></li>
 			</ul>
 		</section>
 	</div>
