수경씨 수정본. 필요없는 이미지들 모두 지움

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -16,7 +16,7 @@
 	<header>
 		<div class="header_right">
 			<div class="nav nav_button">
-				<a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>라이브리 신청</a>
+				<a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>라이브리 사용신청</a>
 			</div>
 			<div class="nav nav_button">
 				<a href="http://www.livere.com" target='_blank'>LiveRe.com</a>
@@ -29,7 +29,7 @@
 		</div>
 	</header>
 
-	<div class="container">
+	<div class="container" style="background-color: #494949; border-top: none;">
 		<div class="headline">
 			<div class="headline1">2014년 지방선거 후보자 여러분께</div>
 			<div class="headline2">라이브리 소셜댓글을 무료로 제공합니다.</div>
@@ -80,10 +80,10 @@
 		</section>
 	</div>
 
-	<div class="container">
+	<div class="container" style="border-bottom: none;">
 		<section class="description">
 			<h2>라이브리 고객사</h2>
-			<p class="subtitle">대한민국의 온라인 소통은 라이브리가 함께합니다.</p>
+			<p class="subtitle" style="margin-bottom: 20px;">대한민국의 온라인 소통은 라이브리가 함께합니다.</p>
 			<ul class="visual_list">
 				<li><a href="http://gov.seoul.go.kr/bigear2-page#3" target="_blank"><img src="../vote2014/images/customers/seoul.png" alt="서울특별시청"></a></li>
 				<li><a href="http://news.busan.go.kr/sub/special01.jsp?amode=_viw&arti_sno=201310021543060001" target="_blank"><img src="../vote2014/images/customers/busan.png" alt=""></a></li>
@@ -95,22 +95,24 @@
 				<li><a href="https://otalk.kbstar.com/2743000243" target="_blank"><img src="../vote2014/images/customers/kb.png" alt=""></a></li>	
 			</ul>
 			
-			<div class="more_desc">1. 언론사 및 방송사: KBS, MBC, SBS, 연합뉴스, 한겨레, 경향신문, 매일경제, 한국경제 등 230여  언론사.</div>
+			<div class="more_desc">1. 언론사 및 방송사: KBS, SBS, 연합뉴스, 한겨레, 경향신문, 매일경제, 한국경제 등 230여  언론사.</div>
 			<div class="more_desc">2. 기업: 삼성전자, LG전자, SK텔레콤, KB국민은행, KEB외환은행, IBK기업은행, BC카드, 하나SK카드 등</div>
 			<div class="more_desc">3. 정부부처 및 공공기관: 서울시, 경기도, 부산시, 세종문화회관, 문화체육관광부 정책브리핑 등</div>
 			<div class="more_desc">4. 비영리기관: 굿네이버스, 아름다운재단 등</div>
 		</section>
 	</div>
 
-	<div class="container">
+	<!--<div class="container" style="height: 200px;">
 		<section class="description">
 			<h2>라이브리 사용 신청하기</h2>
 			<p class="subtitle"><a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>이 링크를 클릭하셔서 신청하실 수 있습니다</a></p>
 		</section>
+	</div>-->
+	<div class="nav nav_button big">
+		<a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>라이브리 사용신청하기</a>
 	</div>
-
 	<footer>
-		Copyright© CIZION All rights reserved.		
+		Copyrightⓒ CIZION All rights reserved.		
 	</footer>
 
 </body>
