set the viewport

--- a/index.html
+++ b/index.html
@@ -11,44 +11,46 @@
 	<meta property="og:image" content="images/vote.png" />
 	<meta property="og:description" content="2014년 지방선거 후보자 여러분께 라이브리 소셜댓글을 무료로 제공합니다. (기간: 2014년 6월 11일 24:00 까지)" 
 	/>
+	<meta name="viewport" content="width=device-width">
 </head>
 <body>
-	<header>
-		<div class="header_right">
-			<div class="nav nav_button">
-				<a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>라이브리 사용신청</a>
-			</div>
-			<div class="nav nav_button">
-				<a href="http://www.livere.com" target='_blank'>LiveRe.com</a>
-			</div>
-		</div>
+	<div id="header">
 		<div class="header_left">
 			<div class="nav">
-				<img src="images/livere_logo.png" width="116" height="33" alt="LiveRe_logo"/>
+				<img src="./images/LR_logo.png" alt="LiveRe_logo"/>
 			</div>
 		</div>
-	</header>
+		<div class="header_right">
+			<div class="nav nav_button">
+				<a href="http://www.livere.com" target='_blank' style="color: #949494;">LiveRe.com 바로가기</a>
+			</div>
+		</div>
+	</div>
 
-	<div class="container" style="background-color: #494949; border-top: none;">
+	<div class="container" style="background-color: #494949; border-top: 1px solid #494949;">
 		<div class="headline">
-			<div class="headline1">2014년 지방선거 후보자 여러분께</div>
-			<div class="headline2">라이브리 소셜댓글을 무료로 제공합니다.</div>
-			<div class="headline3">(기간: 2014년 6월 11일 24:00 까지)</div>
+			<h1>2014년 지방선거<br>후보자 여러분께<br>라이브리 소셜댓글을 무료로 제공합니다.</h1>
+			<h4>(기간: 2014년 6월 11일 24:00 까지)</h4>
+			<div class="nav nav_button big">
+				<a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>라이브리 사용신청</a>
+			</div>
 		</div>
 	</div>
 	
 	<div class="container">
-		<section class="description">
+		<div class="description">
 			<h2>라이브리 소셜댓글이란?</h2>
 			<p class="subtitle">별도의 회원 가입 없이 SNS(트위터, 페이스북 등) 계정으로 로그인하여 사이트에 댓글을 달 수 있는 서비스입니다.</p>
+			<p class="subtitle"><a href="http://vote.livere.com/vote2014/docs/2014_vote_with_livere.pdf" target="_blank">라이브리 소개자료 보기(링크)</a></p>
+			<p class="subtitle" style="color: #949494;">(아래에서 직접 테스트 해보실 수 있습니다)</p>
 			<div id="livereContainer">
 				<script type="text/javascript">
 					var consumer_seq 	= "200";
-					var livere_seq 		= "14937";
-					var smartlogin_seq 	= "228";
+					var livere_seq 		= "19317";
+					var smartlogin_seq 	= "900";
 
 					var title = "Test Page";
-					var refer = "minwookim84.github.io/Vote2014/index.html";
+					var refer = "vote.livere.com/index.html";
 
 					livereReply = new Livere( livere_seq , refer , title );
 					livereLib.start();
@@ -62,10 +64,10 @@
 				<li><img src="images/spam_monitor.png"/><div class="redbox text_desc">스팸댓글 차단, 악성댓글 감소</div></li>
 			</ul>
 			
-		</section>
+		</div>
 	</div>
 	<div class="container">
-		<section class="description">
+		<div class="description">
 			<h2>라이브리 소셜댓글 특장점</h2>
 			<p class="subtitle">라이브리(LiveRe)는 최적의 사용자경험과 안전한 서비스를 제공하는, 소셜댓글 서비스의 기술 표준입니다.</p>
 			<!--<div class="desc_image">
@@ -77,13 +79,14 @@
 				<li><img src="images/web_standard.png"/><div class="redbox text_desc">웹접근성 및 웹표준 준수</div></li>
 				<li><img src="images/shield.jpg"/><div class="redbox text_desc">악성코드, 디도스 공격에 대한 보안</div></li>
 			</ul>
-		</section>
+		</div>
 	</div>
 
 	<div class="container" style="border-bottom: none;">
-		<section class="description">
+		<div class="description">
 			<h2>라이브리 고객사</h2>
 			<p class="subtitle" style="margin-bottom: 20px;">대한민국의 온라인 소통은 라이브리가 함께합니다.</p>
+			<div id="visual_list_wrapper">
 			<ul class="visual_list">
 				<li><a href="http://gov.seoul.go.kr/bigear2-page#3" target="_blank"><img src="../vote2014/images/customers/seoul.png" alt="서울특별시청"></a></li>
 				<li><a href="http://news.busan.go.kr/sub/special01.jsp?amode=_viw&arti_sno=201310021543060001" target="_blank"><img src="../vote2014/images/customers/busan.png" alt=""></a></li>
@@ -94,26 +97,25 @@
 				<li><a href="http://blog.samsung.com/zoominsamsung/1/" target="_blank"><img src="../vote2014/images/customers/samsung.png" alt=""></a></li>
 				<li><a href="https://otalk.kbstar.com/2743000243" target="_blank"><img src="../vote2014/images/customers/kb.png" alt=""></a></li>	
 			</ul>
-			
-			<div class="more_desc">1. 언론사 및 방송사: KBS, SBS, 연합뉴스, 한겨레, 경향신문, 매일경제, 한국경제 등 230여  언론사.</div>
-			<div class="more_desc">2. 기업: 삼성전자, LG전자, SK텔레콤, KB국민은행, KEB외환은행, IBK기업은행, BC카드, 하나SK카드 등</div>
-			<div class="more_desc">3. 정부부처 및 공공기관: 서울시, 경기도, 부산시, 세종문화회관, 문화체육관광부 정책브리핑 등</div>
-			<div class="more_desc">4. 비영리기관: 굿네이버스, 아름다운재단 등</div>
-		</section>
+			</div>
+			<div id="more_desc_wrapper">
+				<a href="http://www.livere.com/intro/portfolio.jsp" target="_blank"><img src="../vote2014/images/customers/livere_customers_all.jpg" alt="라이브리 전체 고객사 목록" width="100%"></a>
+			</div>
+		</div>
 	</div>
 
 	<!--<div class="container" style="height: 200px;">
-		<section class="description">
+		<div class="description">
 			<h2>라이브리 사용 신청하기</h2>
 			<p class="subtitle"><a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>이 링크를 클릭하셔서 신청하실 수 있습니다</a></p>
-		</section>
+		</div>
 	</div>-->
 	<div class="nav nav_button big">
-		<a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>라이브리 사용신청하기</a>
+		<a href="https://docs.google.com/forms/d/1QC23ZgkPvYSEVSNZjGm6lyYi5ILWPIRqmrDfGW9oU4E/viewform" target='_blank'>라이브리 사용신청</a>
 	</div>
-	<footer>
+	<div id="footer">
 		Copyrightⓒ CIZION All rights reserved.		
-	</footer>
+	</div>
 
 </body>
 </html>
